[package]
name = "mdbook-section-validator"
version = "0.2.0"
authors = ["Rachel Brindle <rachel@rachelbrindle.com>"]
edition = "2018"
description = "mdBook preprocessor for defining conditionally valid sections."
homepage = "https://github.com/younata/mdbook-section-validator"
repository = "https://github.com/younata/mdbook-section-validator"
license = "MIT"
readme = "README.md"

[dependencies]
mdbook = "^0.4"
serde_json = "^1.0.0"
regex = "1.5.4"
pulldown-cmark = "0.8.0"
pulldown-cmark-to-cmark = "6.0.0"
url = "2.2.2"
toml = "0.5.7"
clap = "2.33.3"
reqwest = { version = "0.11.3", features = ["serde_json", "json"] }
serde = { version = "1.0.126", features = ["derive"] }
async-trait = "0.1.50"
futures = "0.3.15"